crater-backend/deploy-new/backend/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crater-web-backend
  namespace: crater
  labels:
    app: crater-web-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crater-web-backend
  template:
    metadata:
      labels:
        app: crater-web-backend
    spec:
      containers:
        - name: crater-web-backend
          image: container:v1
          imagePullPolicy: IfNotPresent
          command:
            - /controller
            - --config-file=/etc/config/config.yaml
            - --share-dir-file=/etc/config/share-dir.yaml
            - --server-port=:8088
            - --metrics-bind-address=:8080
            - --health-probe-bind-address=:8081
          volumeMounts:
            - name: backend-conf
              mountPath: /etc/config/config.yaml
              subPath: config.yaml
            - name: share-dir-conf
              mountPath: /etc/config/share-dir.yaml
              subPath: share-dir.yaml
      serviceAccountName: crater-web-backend
      volumes:
        - name: backend-conf
          configMap:
            name: backend-config
            items:
              - key: config.yaml
                path: config.yaml
        - name: share-dir-conf
          configMap:
            name: share-dir
            items:
              - key: share-dir.yaml
                path: share-dir.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: crater-web-backend-svc
  namespace: crater
spec:
  selector:
    app: crater-web-backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8088
